# HWebUI

./: .gitignore  GUICommand.html  GUIEvent.html  GUISignal.html  GUIValue.html  HWebUI.cabal  HWebUI.haddock  HWebUI.hs  HWebUI.html  Messaging.html  README.md  Server.html  Widgets.html  Wires.html  doc-index.html  index-frames.html  index.html  mini_GUICommand.html  mini_GUIEvent.html  mini_GUISignal.html  mini_GUIValue.html  mini_HWebUI.html  mini_Messaging.html  mini_Server.html  mini_Widgets.html  mini_Wires.html
examples/: example-arithmetic.hs  example-counter.hs  example-crud.hs  example-currency.hs  example-multiselect.hs  example1.hs
src/: FreshId.hs  GUICommand.hs  GUIEvent.hs  GUISignal.hs  GUIValue.hs  HWebUI.hs  Messaging.hs  Properties.hs  Server.hs  WidgetWires.hs  Widgets.hs  Wires.hs
