name:                HWebUI
version:             0.1.0.0
synopsis:            Haskell User Interface Library
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Peter Althainz
-- maintainer:          
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/althainz/HWebUI.git

library
  hs-source-dirs:      src
  exposed-modules:     HWebUI
  -- other-modules:       
  build-depends:       aeson,
                       attoparsec,
                       base,
                       containers,
                       netwire,
                       shakespeare-js,
                       text,
                       vector,
                       warp,
                       wai-websockets,
                       websockets,
                       yesod < 1.2

executable HWebUI-example-counter
  hs-source-dirs:      examples
  main-is:             example-counter.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod < 1.2

executable HWebUI-example-arithmetic
  hs-source-dirs:      examples
  main-is:             example-arithmetic.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod < 1.2

executable HWebUI-example-currency
  hs-source-dirs:      examples
  main-is:             example-currency.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod < 1.2

executable HWebUI-example-multiselect
  hs-source-dirs:      examples
  main-is:             example-multiselect.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod < 1.2
