name:                HWebUI
version:             0.1.0.0
synopsis:            Haskell User Interface Library
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Frankfurt Haskell User Group / Peter Althainz
-- maintainer:          
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/althainz/HWebUI.git

Flag examples
  description: Build examples
  default:     False
  manual:      True

library
  GHC-Options: -Wall
  hs-source-dirs:      src
  exposed-modules:     HWebUI, GUIValue, GUIEvent, GUICommand, GUISignal, Messaging, Server, Widgets, Wires, Properties
  -- other-modules:
  extensions:
                       TemplateHaskell,
                       QuasiQuotes,
                       OverloadedStrings,
                       TypeFamilies,
                       MultiParamTypeClasses,
                       Arrows
                       
  build-depends:       aeson,
                       attoparsec,
                       base,
                       containers,
                       netwire,
                       shakespeare-js,
                       text,
                       vector,
                       warp,
                       wai-websockets,
                       websockets,
                       yesod >= 1.2,
                       mtl

executable HWebUI-example-counter
  GHC-Options: -Wall
  hs-source-dirs:      examples
  main-is:             example-counter.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod >= 1.2
  if flag(examples)
    buildable: True
  else
    buildable: False

executable HWebUI-example-arithmetic
  GHC-Options: -Wall
  hs-source-dirs:      examples
  main-is:             example-arithmetic.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod >= 1.2
  if flag(examples)
    buildable: True
  else
    buildable: False

executable HWebUI-example-currency
  GHC-Options: -Wall
  hs-source-dirs:      examples
  main-is:             example-currency.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod >= 1.2
  if flag(examples)
    buildable: True
  else
    buildable: False

executable HWebUI-example-multiselect
  GHC-Options: -Wall
  hs-source-dirs:      examples
  main-is:             example-multiselect.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod >= 1.2
  if flag(examples)
    buildable: True
  else
    buildable: False

executable HWebUI-example-crud
  GHC-Options: -Wall
  hs-source-dirs:      examples
  main-is:             example-crud.hs
  build-depends:       base,
                       containers,
                       HWebUI,
                       netwire,
                       yesod >= 1.2,
                       lens
  if flag(examples)
    buildable: True
  else
    buildable: False
